2010-11-11  Alex Guerrieri <aguerrieri at kannel dot org>
    * COMPATIBILITY BREAKER: Extended Stipe's patch to url-encode the udhdata
      field as well, making it possible to send wap-push and other binary
      messages from sqlbox.

2010-11-11  Alex Guerrieri <aguerrieri at kannel dot org>
    * COMPATIBILITY BREAKER: Modified the format in which the msgdata field was
      stored on the database to be url-encoded. This avoids corrupting the data
      when saving it. Thanks Stipe Tolj  <stolj at kannel.org> for this patch.

2010-11-11  Alex Guerrieri <aguerrieri at kannel dor org>
    * Fixes PostgreSQL code to properly evaluate null columns and avoid
      corrupting numeric fields on messages.

2010-11-02  Stipe Tolj  <stolj at kannel.org>
    * acinclude.m4: use the gateway version to have the terminal sequences and
      various other m4 functions available.
    * configure[.in]: make the output looks like the gateway version, with 
      cleaner sections. Fixed cygwin platform builds.

2010-10-07  Stipe Tolj  <stolj at kannel.org>
    * autotools/*, aclocal.m4, configure, Makefile.in: add autotool build by
      bootstrap run for distribution.
      
2010-10-07  Stipe Tolj  <stolj at kannel.org>
    * gw/sqlbox_[pgsql|sqlite3].c: more compiler warning fixes.
    
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * gw/sqlbox.c, gw/sqlbox_[pgsql|sqlite3].c: fixed various compiler warnings.

2010-09-11  Alex Guerrieri <aguerrieri at kannel dot org>
    * Fixed bug: Not all sms messages were acked properly before, leaving
      messages in the message store. Thanks Rene Kluwen for this patch.

2010-06-16 - Rene Kluwen <rene.kluwen at chimit.nl>
    * Fixed bug that sqlbox didn't disconnect from bearerbox when one of the
      attached smsboxes would disconnect.

2010-08-02 - Alejandro Guerrieri <aguerrieri at kannel dot org>
    * Fixes bug that prevented single quotes to be used on message text and
      other fields. Thanks Rene Kluwen for this patch.
